# PyVPP

./: .gitignore  CHANGELOG.md  Datasets_Available.md  LICENSE  MANIFEST.in  README.md  WekeoDownload.py  pyproject.toml  requirements.txt  setup.py  test_pyvpp.ipynb  validate_package.py  verify_datasets.py
.github/workflows/: publish-pypi.yml
WekeoDownload/: WekeoDownload.py
examples/: README.md  basic_usage.py
pyvpp/: WekeoDownload.py  __init__.py  pyvpp example.ipynb
