[build-system]
requires = ["setuptools>=61.0", "deims", "hda", "geopandas", "rasterio", "pyproj"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvpp"
version = "0.1.0"
authors = [
  { name="Diego García Díaz", email="digd.geografo@gmail.com" }, { name="Ricardo Díaz-Delgado", email="rdiaz@ebd.csic.es" }
]
description = "Python package to download phenological data (HR-VPP products) from Wekeo."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
install_requires = ["hda", "deims", "rasterio", "pyproj", "geopandas"] 

[project.urls]
"Homepage" = "https://github.com/Digdgeo/PyVPP"