[tool.poetry]
name = "pyvpp"
version = "0.1.6"
description = "Python package to download phenological data from Wekeo (HR-VPP datsets from Sentinel 2)\u001b[D\u001b["
authors = ["Diego García Díaz <digd.geografo@gmail.com>", "Ricardo Díaz-Delgado <rdiaz@ebd.csic.es>"]
maintainers = ["Diego García Díaz <digd.geografo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Digdgeo/PyVPP"
keywords = ["phenology", "hrvpp"]

[tool.poetry.dependencies]
python = "^3.8"
hda = "^1.13"
deims = "^3.1"
geopandas = "^0.12.2"
pyproj = "^3.4.1"
rasterio = "^1.3.6"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
