[tool.poetry]
name = "pyvpp"
version = "0.3.1"
description = "Python package to download phenological data from Wekeo (HR-VPP datasets from Sentinel 2)"
authors = ["Diego García Díaz <digd.geografo@gmail.com>", "Ricardo Díaz-Delgado <rdiaz@ebd.csic.es>"]
maintainers = ["Diego García Díaz <digd.geografo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Digdgeo/PyVPP"
keywords = ["phenology", "hrvpp", "vegetation indexes", "copernicus", "wekeo"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
hda = ">=2.18"
deims = ">=4.0"
geopandas = ">=0.8.2"
pyproj = ">=3.0"
rasterio = ">=1.3"
requests = ">=2.20"
fiona = ">=1.8.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = {version = "^23.1.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev = ["black"]
